--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
+@import 'animations';
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import 'notifications'
