--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,9 @@
 @import "alert";
 @import 'animations';
 @import "avatar";
+@import "bubble";
 @import "form_legend_clear";
 @import "navbar";
-@import 'notifications'
+@import 'notifications';
+@import 'pill';
+@import 'table';
