--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,18 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$gray: #475467;
+$light-gray: #EAECF0;
+$grey-blue: #344054;
+$green: #044827;
+$white: #FFF;
+$off-white: #FCFCFD;
+$dark-green: #05311F;
+$light-green : #E3EDE9;
+$bland-green: #1D3228;
+$red: #FECDCA;
+$notice: #FFC65A;
+$success: #1EDD88;
