--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <h1>Notifications</h1>
-
-  <%= render 'search_form', query: @query %>
+<div class="container mt-3 mb-10">
+  <div id="filters" class="border border-light-gray border-bottom-0 px-4 py-3 bg-white">
+      <%= render 'search_form', query: @query %>
+  </div>
 
   <%= turbo_frame_tag :table_notifications do %>
-    <%= render partial: 'table', locals: { notifications: @notifications } %>
+    <%= render partial: 'table', locals: { notifications: @notifications, query: @query, pagy: @pagy } %>
   <% end %>
 </div>
