--- a/app/views/notifications/_search_form.html.erb
+++ b/app/views/notifications/_search_form.html.erb
@@ -1,9 +1,15 @@
-<%= simple_form_for query, url: notifications_path, html: { method: :get, data: { turbo_stream: true, controller: 'form' } } do |f| %>
-  <%= f.text_field :title_i_cont, placeholder: 'Titre', data: { action: 'input->form#submitTurboForm' } %>
+<%= simple_form_for query, url: notifications_path, html: { method: :get, class: "d-flex flex-column flex-xl-row gap-3 justify-content-between align-items-start align-items-xl-center w-100", data: { turbo_stream: true, controller: 'form' } } do |f| %>
+  <%= f.text_field :title_i_cont, placeholder: 'Title', data: { action: 'input->form#submitTurboForm' } %>
 
   <%= f.text_field :content_i_cont, placeholder: 'Content', data: { action: 'input->form#submitTurboForm' } %>
 
-  <%= f.select :user_id_eq, options_for_select(User.pluck(:email, :id), @search_params&.dig(:user_id_eq)), { include_blank: true }, data: { action: 'input->form#submitTurboForm' } %>
+  <%= f.select :notification_type_eq, options_for_select(Notification.notification_types, @search_params&.dig(:notification_type_eq)), { include_blank: 'Notification Type' }, class:"me-4 me-xl-0", data: { action: 'input->form#submitTurboForm' } %>
 
-  <%= f.submit "Rechercher" %>
+  <%= f.text_field :user_actable_of_Company_type_name_or_user_actable_of_Alumni_type_name_i_cont, placeholder: "Nom de l'actable", data: { action: 'input->form#submitTurboForm' } %>
+
+  <div>
+    <%= f.label :user_id_eq, 'Email' %>
+    <%= f.select :user_id_eq, options_for_select(User.pluck(:email, :id), @search_params&.dig(:user_id_eq)), { include_blank: true }, data: { action: 'input->form#submitTurboForm' } %>
+  </div>
+
 <% end %>
