--- a/app/views/notifications/notification_types/_alert.html.erb
+++ b/app/views/notifications/notification_types/_alert.html.erb
@@ -1,5 +1,7 @@
+<div class="text-ellipsis" data-controller="notification" data-notification-timer-value='5000' data-notification-target='notification'>
   <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
     <%= notification.content %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" data-action="click->notification#close">
     </button>
   </div>
+</div>
